# buckler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HUMANS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cursor-skill/buckler/: SKILL.md
docs/: agent-gh.md  agent-git.md  migration.md  paths.md  rule-schema.md  troubleshooting.md
docs/adapters/: README.md  claude-code.md  cursor.md
docs/contracts/: policy-io.md  policy-io.schema.json
packs/: agent-gh.yaml  agent-git.yaml
scripts/: setup.sh
specs/: README.md
specs/active/ci-hygiene/: plan.md  spec.md  tasks.md
specs/active/code-quality-sweep/: spec.md  tasks.md
specs/active/docs-and-runbooks/: spec.md  tasks.md
specs/active/hooks-cross-platform-quoting/: plan.md  spec.md  tasks.md
specs/active/legacy-deprecation-window/: spec.md  tasks.md
specs/active/pack-gh-coverage/: plan.md  spec.md  tasks.md
specs/active/parser-bypass-hardening/: plan.md  spec.md  tasks.md
specs/done/ci-hygiene/: spec.md  tasks.md
specs/done/code-quality-sweep/: plan.md  spec.md  tasks.md
specs/done/docs-and-runbooks/: plan.md  spec.md  tasks.md
specs/done/docs-polish/: spec.md  tasks.md
specs/done/hooks-cross-platform-quoting/: plan.md  spec.md  tasks.md
specs/done/legacy-deprecation-window/: plan.md  spec.md  tasks.md
specs/done/pack-gh-coverage/: plan.md  spec.md  tasks.md
specs/done/parser-bypass-hardening/: plan.md  spec.md  tasks.md
src/buckler/: __init__.py  __main__.py  cli.py  core.py  hooks.py  pack_loader.py  paths.py
src/buckler/adapters/: __init__.py  cursor.py
tests/: test_adapter_cursor.py  test_agent_gh.py  test_agent_git.py  test_agent_git_redteam.py  test_ci_matrix_coherence.py  test_cli.py  test_core.py  test_coverage_gaps.py  test_hooks.py  test_inprocess_cli.py  test_pack_loader.py  test_paths.py  test_policy_schema.py
tests/fixtures/adapters/cursor/: before_shell_exec_add.json  before_shell_exec_commit.json
tests/fixtures/core/: allow_basic.json  deny_git_commit.json  warn_git_add.json
