[project]
name = "buckler"
version = "0.1.0"
description = "Agent gatehouse: declarative hook policies for AI coding harnesses"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["agents", "llm", "git", "hooks", "cursor", "claude", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "tomllib; python_version < '3.11'",
]

[project.scripts]
buckler = "buckler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buckler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
omit = ["src/buckler/__main__.py"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # flake8-comprehensions
    "PIE",           # flake8-pie
    "SIM",           # flake8-simplify
    "RUF",           # Ruff-specific rules
    "N",             # pep8-naming
    "RET",           # flake8-return
    "PTH",           # flake8-use-pathlib
    "PLR", "PLC",    # pylint refactor + convention
]
ignore = [
    "E501",    # line length handled by formatter
    "PLC0415", # import-outside-toplevel: intentional for lazy/conditional imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004", # magic values are fine in tests
]

[tool.ruff.lint.isort]
known-first-party = ["buckler"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
# Third-party packages without bundled stubs
ignore_missing_imports = false
